# x-kernel

./: .config.example  .config.test  .gitignore  Cargo.toml  Kconfig  Makefile  README.md  auto.conf  autoconf.h  starry.mk  test.config  test_kconfig.txt
.github/: PULL_REQUEST_TEMPLATE.md
api/axfeat/: Cargo.toml
api/kapi/: Cargo.toml
api/kapi/src/: io.rs  lib.rs  mm.rs  signal.rs  socket.rs  task.rs  time.rs
api/kapi/src/file/: epoll.rs  event.rs  fs.rs  mod.rs  net.rs  pidfd.rs  pipe.rs  signalfd.rs
api/kapi/src/syscall/: mod.rs  resources.rs  signal.rs  sys.rs  time.rs
api/kapi/src/syscall/fs/: ctl.rs  event.rs  fd_ops.rs  io.rs  memfd.rs  mount.rs  pidfd.rs  pipe.rs  signalfd.rs  stat.rs
api/kapi/src/syscall/io_mpx/: epoll.rs  mod.rs  poll.rs  select.rs
api/kapi/src/syscall/ipc/: mod.rs  msg.rs  shm.rs
api/kapi/src/syscall/mm/: brk.rs  mincore.rs  mmap.rs
api/kapi/src/syscall/net/: cmsg.rs  io.rs  name.rs  opt.rs  socket.rs
api/kapi/src/syscall/sync/: futex.rs  membarrier.rs
api/kapi/src/syscall/task/: clone.rs  ctl.rs  execve.rs  exit.rs  job.rs  schedule.rs  thread.rs  wait.rs
api/kapi/src/tee/: bitstring.rs  config.rs  fs_dirfile.rs  fs_htree.rs  fs_htree_tests.rs  huk_subkey.rs  macros.rs  memtag.rs  mod.rs  otp_stubs.rs  ree_fs_rpc.rs  rng_software.rs  tee_api_defines_extensions.rs  tee_fs.rs  tee_fs_key_manager.rs  tee_generic.rs  tee_misc.rs  tee_obj.rs  tee_pobj.rs  tee_property.rs  tee_ree_fs.rs  tee_session.rs  tee_svc_cryp.rs  tee_svc_cryp2.rs  tee_svc_storage.rs  tee_ta_manager.rs  tee_time.rs  test_unit_test.rs  types_ext.rs  user_access.rs  user_ta.rs  utee_defines.rs  utils.rs  uuid.rs  vm.rs
api/kapi/src/tee/common/: array.rs  file_ops.rs  mod.rs
api/kapi/src/tee/crypto/: crypto.rs  crypto_impl.rs  mod.rs  sm3_hash.rs  sm3_hmac.rs
api/kapi/src/tee/crypto_temp/: aes_cbc.rs  crypto_hash_temp.rs  hash.rs  mod.rs
api/kapi/src/tee/libmbedtls/: bignum.rs  ecc.rs  mod.rs  rsa.rs
api/kapi/src/tee/libutee/: mod.rs  tee_api_objects.rs  utee_defines.rs
api/kapi/src/terminal/: job.rs  ldisc.rs
api/kapi/src/vfs/: mod.rs  proc.rs  tmp.rs
api/kapi/src/vfs/dev/: csv_guest.rs  dice.rs  event.rs  fb.rs  log.rs  loop.rs  memtrack.rs  mod.rs  tty.rs
api/kapi/src/vfs/dev/tty/: ntty.rs  ptm.rs  pts.rs
api/kcore/: Cargo.toml
api/kcore/src/: futex.rs  lib.rs  mm.rs  resources.rs  shm.rs  task.rs  time.rs
api/kcore/src/task/: stat.rs
api/kcore/src/vfs/: dev.rs  dir.rs  file.rs  fs.rs  mod.rs
api/kfeat/: Cargo.toml
api/kfeat/src/: lib.rs
api/linux_sysno/: Cargo.toml  build.rs
api/linux_sysno/src/: args.rs  lib.rs  macros.rs  map.rs  set.rs
api/linux_sysno/src/arch/: aarch64.rs  aarch64_tee.rs  arm.rs  loongarch64.rs  mod.rs  riscv64.rs  x86_64.rs
api/linux_sysno/src/errno/: generated.rs  mod.rs
arch/axhal/: Cargo.toml  build.rs
arch/axhal/src/: dummy.rs  irq.rs  lib.rs  mem.rs  paging.rs  percpu.rs  time.rs
arch/kcpu/: Cargo.toml  README.md
arch/kcpu/src/: active_exception_context.rs  excp.rs  lib.rs  userspace_common.rs  uspace_common.rs
arch/kcpu/src/aarch64/: boot.rs  copy_user.S  ctx.rs  excp.S  excp.rs  instrs.rs  mod.rs  userspace.rs
arch/kcpu/src/loongarch64/: boot.rs  ctx.rs  excp.rs  instrs.rs  mod.rs  unaligned.rs  userspace.rs
arch/kcpu/src/riscv/: boot.rs  ctx.rs  excp.rs  instrs.rs  mod.rs  userspace.rs
arch/kcpu/src/x86_64/: boot.rs  ctx.rs  excp.rs  instrs.rs  mod.rs  userspace.rs
arch/khal/: Cargo.toml  build.rs
arch/khal/src/: dtb.rs  dummy.rs  irq.rs  lib.rs  mem.rs  percpu.rs  time.rs  tls.rs
arch/kipi/: Cargo.toml
arch/kipi/src/: event.rs  lib.rs  queue.rs  tests.rs
core/axruntime/: Cargo.toml
core/axruntime/src/: lang_items.rs  lib.rs  mp.rs
core/kernel_elf_parser/: Cargo.toml
core/kpoll/: Cargo.toml
core/kpoll/src/: lib.rs
core/kpoll/tests/: async.rs  tests.rs
core/ksync/: Cargo.toml  README.md  REMADME.md
core/ksync/src/: lib.rs  mutex.rs  rwlock.rs  semaphore.rs  tests.rs  util.rs
core/ksync/tests/: mutex_tests.rs  rwlock_tests.rs  semaphore_tests.rs
core/ktask/: Cargo.toml
core/ktask/src/: api.rs  global_task_queue.rs  lib.rs  run_queue.rs  task.rs  tests.rs  wait_queue.rs
core/ktask/src/future/: mod.rs  poll.rs  time.rs
docs/: KCONFIG.md
drivers/: Kconfig
drivers/arm-gic/: Cargo.toml  README.md
drivers/arm-gic/src/: gicv3.rs  lib.rs  sysreg.rs
drivers/arm-gic/src/gicv3/: registers.rs
drivers/axdriver/: Cargo.toml
drivers/axdriver/src/: drivers.rs  dummy.rs  ixgbe.rs  lib.rs  prelude.rs  virtio.rs
drivers/axdriver/src/bus/: mmio.rs  pci.rs
drivers/axdriver_virtio/: Cargo.toml
drivers/axdriver_virtio/src/: blk.rs  input.rs  lib.rs  net.rs  socket.rs
drivers/input/: Cargo.toml
drivers/input/src/: lib.rs
drivers/kdriver/: Cargo.toml
drivers/kdriver/src/: drivers.rs  ixgbe.rs  lib.rs  macros.rs  prelude.rs  virtio.rs
drivers/kdriver/src/bus/: mmio.rs  pci.rs
drivers/kdriver/src/structs/: dyn.rs  mod.rs  static.rs
drivers/net/: Cargo.toml
drivers/net/src/: fxmac.rs  ixgbe.rs  lib.rs  net_buf.rs
drivers/pci/: Cargo.toml
drivers/pci/src/: lib.rs
drivers/virtio/: Cargo.toml
drivers/virtio/src/: input.rs  lib.rs  mock_virtio.rs
drivers/vsock/: Cargo.toml
drivers/vsock/src/: lib.rs
entry/: Cargo.toml
entry/src/: entry.rs  main.rs  unittest_simple.rs
fs/fs-ng-vfs/: Cargo.toml
fs/fs-ng-vfs/src/: lib.rs
fs/kfs/: Cargo.toml
fs/kfs/src/: path_resolver.rs  working_context.rs
fs/kfs/src/fs/ext4/: fs.rs  inode.rs  mod.rs  util.rs
fs/kfs/src/highlevel/: file.rs
fs/rsext4/: Cargo.toml
fs/rsext4/src/: api.rs  bitmap.rs  bitmap_cache.rs  blockdev.rs  blockgroup_description.rs  bmalloc.rs  config.rs  datablock_cache.rs  dir.rs  disknode.rs  endian.rs  entries.rs  error.rs  ext4.rs  extents_tree.rs  file.rs  hashtree.rs  inodetable_cache.rs  lib.rs  loopfile.rs  superblock.rs  tool.rs
fs/rsext4/src/jbd2/: jbd2.rs  jbdstruct.rs  mod.rs
init/kruntime/: Cargo.toml
init/kruntime/src/: lib.rs  mp.rs
io/axdma/: Cargo.toml
io/axdma/src/: dma.rs  lib.rs
scripts/: ci-test.py  dice-dep.sh  start.sh
(+544 files in other folders)
