[workspace]
resolver = "2"
members = ["entry"]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

authors = ["KylinSoft Co., Ltd. <https://www.kylinos.cn/>"]
homepage = "https://gitee.com/openkylin/x-kernel"
repository = "https://gitee.com/openkylin/starry-os"
keywords = ["kylin-x-kernel", "kernel"]
categories = ["os", "no-std"]
documentation = "https://gitee.com/openkylin/x-kernel"

[workspace.dependencies]
# X-kernel Modules
axfeat = { path = "api/axfeat", features = [
    "alloc-slab",
    "fp-simd",
    "fs-ext4",
    "net",
    "page-alloc-4g",
    "rtc",
    "sched-rr",
    "task-ext",
    "uspace",
] }

kalloc = { path = "mm/kalloc" }
platconfig = { path = "util/platconfig" }
platconfig-macros = { path = "util/platconfig-macros" }
fbdevice = { path = "io/fbdevice" }
kdriver = { path = "drivers/kdriver" }
axdma = { path = "io/axdma" }
axfs = { path = "fs/axfs" }
khal = { path = "arch/khal" }
inputdev = { path = "io/inputdev" }
kipi = { path = "arch/kipi" }
klogger = { path = "util/klogger" }
axmm = { path = "mm/axmm" }
axnet = { path = "net/axnet" }
axruntime = { path = "core/axruntime" }
ksync = { path = "core/ksync" }
ktask = { path = "core/ktask" }
axwatchdog = { path = "io/axwatchdog" }
kcpu = { path = "arch/kcpu" }

# x-kernel Crates
alloc-engine = { path = "mm/alloc-engine", features = ["axerrno"] }
page_table = { path = "mm/page_table", features = ["axerrno"] }
backtrace = { path = "util/backtrace" }
axerrno = { path = "util/axerrno" }
axfs-ng-vfs = { path = "fs/axfs-ng-vfs" }
kio = { path = "io/kio" }
kpoll = { path = "core/kpoll" }
memaddr = { path = "mm/memaddr" }
memset = { path = "mm/memset" }
kspin = { path = "sync/kspin" }

# x-kenrel userspace Modules
starry-signal = { version = "0.2", path = "process/starry-signal" }
starry-core = { path = "api/starry-core" }
starry-api = { path = "api/starry-api" }
starry-process = { path = "process/starry-process" }
starry-vm = { path = "process/starry-vm" }

# Platform Abstraction Layer
kplat = { path = "platforms/kplat" }
kplat-macros = { path = "platforms/kplat-macros" }
aarch64-qemu-virt = { path = "platforms/aarch64-qemu-virt" }
x86-pc = { path = "platforms/x86-pc" }
x86-csv = { path = "platforms/x86-csv" }
riscv64-qemu-virt = { path = "platforms/riscv64-qemu-virt" }
loongarch64-qemu-virt = { path = "platforms/loongarch64-qemu-virt" }
aarch64-peripherals = { path = "platforms/aarch64-peripherals", default-features = false }
aarch64-crosvm-virt = { path = "platforms/aarch64-crosvm-virt" }

# Utility Crates
arm-gic = { path = "drivers/arm-gic" }
rs_fdtree = { path = "drivers/rs-fdtree" }
syscalls = { path = "api/syscalls", default-features = false }
bitflags = "2.10"
bytemuck = { version = "1.23", features = ["unsound_ptr_pod_impl"] }
cfg-if = "1.0"
event-listener = { version = "5.4.0", default-features = false }
extern-trait = "0.2"
hashbrown = "0.16"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linkme = "0.3.33"
linux-raw-sys = { version = "0.11", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }
scope-local = "0.1"
slab = { version = "0.4.9", default-features = false }
spin = "0.10"
log = "0.4"
percpu = "0.2"
lazyinit = "0.2"
crate_interface = "0.1.4"
chrono = { version = "0.4", default-features = false }
enum_dispatch = "0.3"
ctor_bare = "0.2"
lock_api = { version = "0.4", default-features = false }

# Tee Crates
tee_raw_sys = { path = "tee/tee_raw_sys" }

# Driver Crates
driver_base = { path = "drivers/driver_base" }
block = { path = "drivers/block" }
display = { path = "drivers/display" }
input = { path = "drivers/input" }
net = { path = "drivers/net" }
pci = { path = "drivers/pci" }
vsock = { path = "drivers/vsock" }
virtio = { path = "drivers/virtio" }
