[workspace]
resolver = "2"
members = [
    "entry",
    "xtask/cargo-platconfig",
    "xtask/kconfig-gen",
    "platforms/bootloader",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

authors = ["KylinSoft Co., Ltd. <https://www.kylinos.cn/>"]
homepage = "https://gitee.com/openkylin/x-kernel"
repository = "https://gitee.com/openkylin/x-kernel"
documentation = "https://gitee.com/openkylin/x-kernel"
keywords = ["kylin-x-kernel", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
# x-kernel Modules
kfeat = { path = "api/kfeat" }
kruntime = { path = "init/kruntime" }
kalloc = { path = "mm/kalloc" }
fbdevice = { path = "io/fbdevice" }
kdriver = { path = "drivers/kdriver" }
kdma = { path = "io/kdma" }
kfs = { path = "fs/kfs" }
khal = { path = "arch/khal" }
inputdev = { path = "io/inputdev" }
kipi = { path = "arch/kipi" }
memspace = { path = "mm/memspace" }
knet = { path = "net/knet" }
ksync = { path = "core/ksync" }
ktask = { path = "core/ktask" }
watchdog = { path = "io/watchdog" }
kcpu = { path = "arch/kcpu" }


# x-kernel Crates
alloc-engine = { path = "mm/alloc-engine" }
page_table = { path = "mm/page_table" }
fs-ng-vfs = { path = "fs/fs-ng-vfs" }
kio = { path = "io/kio" }
kpoll = { path = "core/kpoll" }
memaddr = { path = "mm/memaddr" }
memset = { path = "mm/memset" }
kspin = { path = "sync/kspin" }
ktypes = { path = "core/ktypes" }

# x-kernel userspace Modules
ksignal = { path = "process/ksignal" }
kcore = { path = "api/kcore" }
kapi = { path = "api/kapi" }
kprocess = { path = "process/kprocess" }
osvm = { path = "process/osvm" }
kernel-elf-parser = { path = "core/kernel_elf_parser" }
slab_allocator = { path = "core/slab_allocator" }

# Platform Abstraction Layer
kplat = { path = "platforms/kplat" }
kplat-macros = { path = "platforms/kplat-macros" }
aarch64-qemu-virt = { path = "platforms/aarch64-qemu-virt" }
x86_64-qemu-virt = { path = "platforms/x86_64-qemu-virt" }
x86-csv = { path = "platforms/x86-csv" }
riscv64-qemu-virt = { path = "platforms/riscv64-qemu-virt" }
loongarch64-qemu-virt = { path = "platforms/loongarch64-qemu-virt" }
aarch64-peripherals = { path = "platforms/aarch64-peripherals", default-features = false }
aarch64-crosvm-virt = { path = "platforms/aarch64-crosvm-virt" }

# Third Crates
arm-gic = { path = "drivers/arm-gic" }
rs_fdtree = { path = "drivers/rs-fdtree" }
linux_sysno = { path = "api/linux_sysno", default-features = false }
# printf-compat = { path = "util/printf-compat", default-features = false }
bitflags = "2.10"
bytemuck = { version = "1.23", features = ["unsound_ptr_pod_impl"] }
cfg-if = "1.0"
event-listener = { version = "5.4.0", default-features = false }
extern-trait = "0.2"
hashbrown = "0.16"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linkme = "0.3.33"
linux-raw-sys = { version = "0.11", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }
scope-local = "0.1"
slab = { version = "0.4.9", default-features = false }
spin = "0.10"
log = "0.4"
percpu = "0.2"
lazyinit = "0.2"
crate_interface = "0.1.4"
chrono = { version = "0.4", default-features = false }
enum_dispatch = "0.3"
lock_api = { version = "0.4", default-features = false }
strum = { version = "0.27", default-features = false, features = ["derive"] }
x86_64 = { version = "0.15.2", features = ["instructions"] }

# Tee Crates
tee_raw_sys = { path = "tee/tee_raw_sys" }
mbedtls = { version = "0.13.4", package = "mbedtls-smx", default-features = false, features = [
    "no_std_deps",
] }
rust-dice = { version = "0.1.1", default-features = false }

# Driver Crates
driver_base = { path = "drivers/driver_base" }
block = { path = "drivers/block" }
display = { path = "drivers/display" }
input = { path = "drivers/input" }
net = { path = "drivers/net" }
pci = { path = "drivers/pci" }
vsock = { path = "drivers/vsock" }
virtio = { path = "drivers/virtio" }
aarch64-pmuv3 = { path = "drivers/aarch64-pmuv3" }
fatfs = { path = "fs/fatfs", default-features = false }
rsext4 = { path = "fs/rsext4", default-features = false }

# util Crates
macros = { path = "util/macros" }
kinit_setup = { path = "util/kinit_setup" }
platconfig = { path = "util/platconfig" }
platconfig-macros = { path = "util/platconfig-macros" }
klogger = { path = "util/klogger" }
backtrace = { path = "util/backtrace" }
kerrno = { path = "util/kerrno" }
unittest = { path = "util/unittest" }
kconfig-gen = { path = "xtask/kconfig-gen" }
smoltcp = { version = "0.12.0",package = "x-smoltcp", default-features = false }
