[package]
name = "entry"
version.workspace = true
edition.workspace = true
authors = ["KylinSoft Co., Ltd. <https://www.kylinos.cn/>"]
description = "X TeeOS Entry Crate"
license.workspace = true
homepage.workspace = true

[features]
default = []
tee = ["starry-api/tee", "starry-core/tee"]
tee_test = ["tee", "starry-api/tee_test"]
qemu = [
    "kfeat/display",
    "kfeat/input",
    "starry-api/input",

    "kfeat/vsock",
    "starry-api/vsock",

    "kfeat/defplat-aarch64",
    "kfeat/bus-pci",

    # auxilary features
    "kfeat/fs-times",
    "starry-api/dev-log",
]
smp = ["kfeat/smp"]

# vf2 = ["dep:kplat-riscv64-visionfive2", "kfeat/driver-sdmmc"]
dice = ["crosvm", "starry-api/dice"]
crosvm = [
    "kfeat/display",
    "kfeat/input",
    "starry-api/input",

    "kfeat/vsock",
    "starry-api/vsock",

    "kfeat/crosvm",
    "dep:aarch64-crosvm-virt",
    "pci",

    "smp",

    # auxilary features
    "kfeat/fs-times",
    "starry-api/dev-log",
]

x86_csv = [
    "kfeat/display",
    "kfeat/input",
    "starry-api/input",

    "kfeat/vsock",
    "starry-api/vsock",

    "kfeat/crosvm",
    "dep:x86-csv",
    "pci",

    "smp",

    # auxilary features
    "kfeat/fs-times",
    "starry-api/dev-log",
]

# Stubs
pci = ["kfeat/bus-pci"]
mmio = ["kfeat/bus-mmio"]

[dependencies]
kdriver.workspace = true
axerrno.workspace = true
kfeat.workspace = true
axfs.workspace = true
khal.workspace = true
klogger.workspace = true
kruntime.workspace = true
ksync.workspace = true
ktask.workspace = true
cfg-if.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
kprocess.workspace = true
ksignal.workspace = true

starry-core.workspace = true
starry-api.workspace = true

[dependencies.aarch64-crosvm-virt]
workspace = true
optional = true
features = ["fp-simd", "smp", "rtc"]

[dependencies.x86-csv]
workspace = true
optional = true
features = ["fp-simd", "smp", "rtc"]

[package.metadata.vendor-filter]
platforms = ["riscv64gc-unknown-none-elf", "loongarch64-unknown-none-softfloat"]
all-features = true
