[package]
name = "entry"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "X TeeOS Entry Crate"
license.workspace = true
homepage.workspace = true

[features]
default = []
tee = ["kapi/tee", "kcore/tee"]
tee_test = ["tee", "kapi/tee_test"]
qemu = [
    "kfeat/display",
    "kfeat/input",
    "kapi/input",

    "kfeat/vsock",
    "kapi/vsock",

    "kfeat/defplat-aarch64",
    "kfeat/bus-pci",

    # auxilary features
    "kfeat/fs-times",
    "kapi/dev-log",
]
smp = ["kfeat/smp"]

# vf2 = ["dep:kplat-riscv64-visionfive2", "kfeat/driver-sdmmc"]
dice = ["crosvm", "kapi/dice"]
crosvm = [
    "kfeat/display",
    "kfeat/input",
    "kapi/input",
    "kfeat/vsock",
    "kapi/vsock",

    "kfeat/crosvm",
    "dep:aarch64-crosvm-virt",
    "pci",

    "smp",

    # auxilary features
    "kfeat/fs-times",
    "kapi/dev-log",
]

x86_csv = [
    "kfeat/display",
    "kfeat/input",
    "kapi/input",

    "kfeat/vsock",
    "kapi/vsock",
    "kfeat/crosvm",
    "dep:x86-csv",
    "pci",

    "smp",

    # auxilary features
    "kfeat/fs-times",
    "kapi/dev-log",
]

# Stubs
pci = ["kfeat/bus-pci"]
mmio = ["kfeat/bus-mmio"]

[dependencies]
kdriver.workspace = true
kerrno.workspace = true
kfeat.workspace = true
kfs.workspace = true
khal.workspace = true
klogger.workspace = true
kruntime.workspace = true
ksync.workspace = true
ktask.workspace = true
cfg-if.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
kprocess.workspace = true
ksignal.workspace = true

kcore.workspace = true
kapi.workspace = true

[dependencies.aarch64-crosvm-virt]
workspace = true
optional = true
features = ["fp-simd", "smp", "rtc"]

[dependencies.x86-csv]
workspace = true
optional = true
features = ["fp-simd", "smp", "rtc"]

[package.metadata.vendor-filter]
platforms = ["riscv64gc-unknown-none-elf", "loongarch64-unknown-none-softfloat"]
all-features = true
