[package]
name = "entry"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "X TeeOS Entry Crate"
license.workspace = true
homepage.workspace = true

[features]
# all of platforms should enable default features
kernel = [
    "kfeat/alloc-slab",
    "kfeat/fs-ext4",
    "kfeat/net",
    "kfeat/page-alloc-4g",
    "kfeat/rtc",
    "kfeat/sched-rr",
    "kfeat/task-ext",
    "kfeat/uspace",
]

tee = ["kapi/tee", "kcore/tee", "kapi/tee_test"]
smp = ["kfeat/smp"]
unittest = ["dep:unittest"]

# Stubs
pci = ["kfeat/bus-pci"]
mmio = ["kfeat/bus-mmio"]

# qemu default platforms enabled drivers
qemu = [
    "kernel",
    "kfeat/fp-simd",
    "kfeat/display",
    "kfeat/input",
    "kapi/input",
    "kfeat/vsock",
    "kapi/vsock",
    "kfeat/fs-times",
    "kapi/dev-log",
    "pci",
    "tee",
]

# aarch64-qemu-virt platform
aarch64_qemu_virt = [
    "kernel",
    "qemu",
    "smp",
    # "kfeat/watchdog",
    "dep:aarch64-qemu-virt",
]

x86_64_qemu_virt = ["kernel", "qemu", "dep:x86_64-qemu-virt"]

riscv64_qemu_virt = ["kernel", "qemu", "dep:riscv64-qemu-virt"]

loongarch64_qemu_virt = ["kernel", "qemu", "dep:loongarch64-qemu-virt"]

# pkvm platform
aarch64_crosvm_virt = [
    "kernel",
    "kfeat/fp-simd",
    "kfeat/display",
    "kfeat/input",
    "kapi/input",
    "kfeat/vsock",
    "kapi/vsock",
    "dep:aarch64-crosvm-virt",
    "pci",
    "smp",
    # auxilary features
    "kfeat/fs-times",
    "kapi/dev-log",
    "kfeat/crosvm",
    "kapi/dice",
]

# higuang csv platform
x86_csv = [
    "kernel",
    "kfeat/display",
    "kfeat/input",
    "kapi/input",

    "kfeat/vsock",
    "kapi/vsock",
    "kfeat/sev",
    "dep:x86-csv",
    "pci",

    # auxilary features
    "kfeat/fs-times",
    "kapi/dev-log",
]


[dependencies]
kdriver.workspace = true
kerrno.workspace = true
kfeat.workspace = true
kfs.workspace = true
khal.workspace = true
klogger.workspace = true
kruntime.workspace = true
ksync.workspace = true
ktask.workspace = true
cfg-if.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
kprocess.workspace = true
ksignal.workspace = true
kapi.workspace = true
kcore.workspace = true

unittest = { workspace = true, optional = true }

[dependencies.aarch64-qemu-virt]
workspace = true
optional = true
features = ["fp-simd", "smp", "rtc"]

[dependencies.x86_64-qemu-virt]
workspace = true
optional = true
features = ["fp-simd", "rtc"]

[dependencies.riscv64-qemu-virt]
workspace = true
optional = true
features = ["fp-simd", "rtc"]

[dependencies.loongarch64-qemu-virt]
workspace = true
optional = true
features = ["fp-simd", "rtc"]

[dependencies.aarch64-crosvm-virt]
workspace = true
optional = true
features = ["fp-simd", "smp", "rtc"]

[dependencies.x86-csv]
workspace = true
optional = true
features = ["fp-simd", "rtc"]


[package.metadata.vendor-filter]
platforms = ["riscv64gc-unknown-none-elf", "loongarch64-unknown-none-softfloat"]
all-features = true
