[package]
name = "axfeat"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Top-level feature selection for ArceOS"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/api/axfeat"
documentation = "https://arceos-org.github.io/arceos/axfeat/index.html"

[features]
default = []

# Multicore
smp = ["khal/smp", "axruntime/smp", "axtask?/smp", "kspin/smp"]

# Floating point/SIMD
fp-simd = ["khal/fp-simd"]

# User space support
uspace = ["khal/uspace"]

# Interrupts
irq = ["khal/irq", "axruntime/irq", "axtask?/irq", "axdriver?/irq"]
ipi = ["irq", "dep:kipi", "khal/ipi", "axruntime/ipi"]

# Custom or default platforms
myplat = ["khal/myplat"]
defplat = ["khal/defplat"]
defplat-aarch64 = ["khal/defplat-aarch64"]
defplat-x86_64 = ["khal/defplat-x86_64"]
defplat-riscv64 = ["khal/defplat-riscv64"]
defplat-loongarch64 = ["khal/defplat-loongarch64"]
crosvm = ["khal/crosvm", "axdriver/crosvm", "axruntime/crosvm"]

# Memory
alloc = ["kalloc", "axruntime/alloc"]
alloc-tlsf = ["kalloc/tlsf"]
alloc-slab = ["kalloc/slab"]
alloc-buddy = ["kalloc/buddy"]
alloc-level-1 = ["kalloc/level-1", "alloc"]
page-alloc-64g = ["kalloc/page-alloc-64g"]                   # up to 64G memory capacity
page-alloc-4g = ["kalloc/page-alloc-4g"]                     # up to 4G memory capacity
paging = ["alloc", "khal/paging", "axruntime/paging"]
tls = ["alloc", "khal/tls", "axruntime/tls", "axtask?/tls"]
dma = ["alloc", "paging"]

# Multi-threading and scheduler
multitask = [
    "alloc",
    "axtask/multitask",
    "axsync/multitask",
    "axruntime/multitask",
]
task-ext = ["axtask/task-ext"]
sched-fifo = ["axtask/sched-fifo"]
sched-rr = ["axtask/sched-rr", "irq"]
sched-cfs = ["axtask/sched-cfs", "irq"]

# File system
fs = [
    "alloc",
    "paging",
    "axdriver/virtio-blk",
    "dep:axfs",
    "axruntime/fs",
] # TODO: try to remove "paging"
fs-ext4 = ["fs", "axfs/ext4"]
fs-fat = ["fs", "axfs/fat"]
fs-times = ["fs", "axfs/times"]

# Networking
net = ["alloc", "paging", "axdriver/virtio-net", "dep:axnet", "axruntime/net"]
vsock = ["net", "axdriver/virtio-socket", "axruntime/vsock", "axnet/vsock"]

# Display
display = [
    "alloc",
    "paging",
    "axdriver/virtio-gpu",
    "dep:axdisplay",
    "axruntime/display",
]

# Input
input = [
    "alloc",
    "paging",
    "axdriver/virtio-input",
    "dep:axinput",
    "axruntime/input",
]

# Real Time Clock (RTC) Driver.
rtc = ["khal/rtc", "axruntime/rtc"]

# Device drivers
bus-mmio = ["axdriver?/bus-mmio"]
bus-pci = ["axdriver?/bus-pci"]
driver-ramdisk = ["axdriver?/ramdisk", "axfs?/use-ramdisk"]
driver-sdmmc = ["axdriver?/sdmmc"]
# driver-ixgbe = ["axdriver?/ixgbe"]
# driver-fxmac = ["axdriver?/fxmac"]                          # fxmac ethernet driver for PhytiumPi
driver-bcm2835-sdhci = ["axdriver?/bcm2835-sdhci"]
driver-ahci = ["axdriver?/ahci"]

# driver-dyn = ["paging", "axruntime/driver-dyn", "axdriver/dyn"]

# Backtrace
dwarf = ["alloc", "backtrace/dwarf"]

# Watchdog
watchdog = ["axruntime/watchdog"]

# Pmu
pmu = ["axruntime/pmu"]

[dependencies]
kalloc = { workspace = true, optional = true }
backtrace.workspace = true
axdisplay = { workspace = true, optional = true }
axdriver = { workspace = true, optional = true }
axfs = { workspace = true, optional = true }
khal.workspace = true
axinput = { workspace = true, optional = true }
kipi = { workspace = true, optional = true }
klogger.workspace = true
axnet = { workspace = true, optional = true }
axruntime.workspace = true
axsync = { workspace = true, optional = true }
axtask = { workspace = true, optional = true }
kspin = { workspace = true, optional = true }
