[package]
name = "axfeat"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Top-level feature selection for ArceOS"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/api/axfeat"
documentation = "https://arceos-org.github.io/arceos/axfeat/index.html"

[features]
default = []

# Multicore
smp = ["khal/smp", "axruntime/smp", "axtask?/smp", "kspin/smp"]

# Floating point/SIMD
fp-simd = ["khal/fp-simd"]

# User space support
uspace = ["khal/uspace"]

# Interrupts
ipi = [ "dep:kipi", "khal/ipi", "axruntime/ipi"]

# Custom or default platforms
myplat = ["khal/myplat"]
defplat = ["khal/defplat"]
defplat-aarch64 = ["khal/defplat-aarch64"]
defplat-x86_64 = ["khal/defplat-x86_64"]
defplat-riscv64 = ["khal/defplat-riscv64"]
defplat-loongarch64 = ["khal/defplat-loongarch64"]
crosvm = ["khal/crosvm", "kdriver/crosvm", "axruntime/crosvm"]

# Memory
alloc = ["kalloc", "axruntime/alloc"]
alloc-tlsf = ["kalloc/tlsf"]
alloc-slab = ["kalloc/slab"]
alloc-buddy = ["kalloc/buddy"]
alloc-level-1 = ["kalloc/level-1", "alloc"]
page-alloc-64g = ["kalloc/page-alloc-64g"]                   # up to 64G memory capacity
page-alloc-4g = ["kalloc/page-alloc-4g"]                     # up to 4G memory capacity
paging = ["alloc", "khal/paging", "axruntime/paging"]
dma = ["alloc", "paging"]

task-ext = ["axtask/task-ext"]
sched-fifo = ["axtask/sched-fifo"]
sched-rr = ["axtask/sched-rr"]
sched-cfs = ["axtask/sched-cfs"]

# File system
fs = [
    "alloc",
    "paging",
    "kdriver/virtio-blk",
    "dep:axfs",
    "axruntime/fs",
] # TODO: try to remove "paging"
fs-ext4 = ["fs", "axfs/ext4"]
fs-fat = ["fs", "axfs/fat"]
fs-times = ["fs", "axfs/times"]

# Networking
net = ["alloc", "paging", "kdriver/virtio-net", "dep:axnet", "axruntime/net"]
vsock = ["net", "kdriver/virtio-socket", "axruntime/vsock", "axnet/vsock"]

# Display
display = [
    "alloc",
    "paging",
    "kdriver/virtio-gpu",
    "dep:fbdevice",
    "axruntime/display",
]

# Input
input = [
    "alloc",
    "paging",
    "kdriver/virtio-input",
    "dep:inputdev",
    "axruntime/input",
]

# Real Time Clock (RTC) Driver.
rtc = ["khal/rtc", "axruntime/rtc"]

# Device drivers
bus-mmio = ["kdriver/bus-mmio"]
bus-pci = ["kdriver/bus-pci"]
driver-ramdisk = ["kdriver/ramdisk", "axfs?/use-ramdisk"]
driver-sdmmc = ["kdriver/sdmmc"]
# driver-ixgbe = ["kdriver?/ixgbe"]
# driver-fxmac = ["kdriver?/fxmac"]                          # fxmac ethernet driver for PhytiumPi
driver-bcm2835-sdhci = ["kdriver/bcm2835-sdhci"]
driver-ahci = ["kdriver/ahci"]

# driver-dyn = ["paging", "axruntime/driver-dyn", "kdriver/dyn"]

# Backtrace
dwarf = ["alloc", "backtrace/dwarf"]

# Watchdog
watchdog = ["axruntime/watchdog"]

# Pmu
pmu = ["axruntime/pmu"]

[dependencies]
kalloc = { workspace = true, optional = true }
backtrace.workspace = true
fbdevice = { workspace = true, optional = true }
kdriver.workspace = true
axfs = { workspace = true, optional = true }
khal.workspace = true
inputdev = { workspace = true, optional = true }
kipi = { workspace = true, optional = true }
klogger.workspace = true
axnet = { workspace = true, optional = true }
axruntime.workspace = true
ksync = { workspace = true, optional = true }
axtask = { workspace = true, optional = true }
kspin = { workspace = true, optional = true }
