[package]
name = "kapi"
description = "Kernel API crate for X-Kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
input = ["dep:inputdev"]
memtrack = ["kfeat/dwarf", "kalloc/tracking", "dep:gimli"]
vsock = ["knet/vsock"]
dev-log = []
dice = [
    "dep:aarch64-crosvm-virt",
    "kalloc/dice",
    "dep:rand_chacha",
    "dep:dice",
    "dep:mbedtls",
]
tee = [
    "linux_sysno/tee",
    "dep:tee_raw_sys",
    "dep:bincode",
    "dep:uuid",
    "dep:hex",
]
tee_test_mock_user_access = []
tee_test = ["tee"]

[dependencies]
kalloc.workspace = true
backtrace.workspace = true
platconfig.workspace = true
unittest = { workspace = true }
dice = { workspace = true, optional = true }
mbedtls = { workspace = true, optional = true }
fbdevice.workspace = true
kdriver.workspace = true
ktypes.workspace = true

kerrno.workspace = true
kfeat.workspace = true
fs-ng-vfs.workspace = true
kfs.workspace = true
khal.workspace = true
inputdev = { workspace = true, optional = true }
kio.workspace = true
klogger.workspace = true
memspace.workspace = true
knet.workspace = true
aarch64-crosvm-virt = { workspace = true, optional = true }
kpoll.workspace = true
ksync.workspace = true
ktask.workspace = true
bitflags.workspace = true
bitmaps = { version = "3.2.1", default-features = false }
bytemuck.workspace = true
cfg-if.workspace = true
chrono = { version = "0.4.41", default-features = false }
downcast-rs = { version = "2.0", default-features = false, features = ["sync"] }
event-listener.workspace = true
flatten_objects = "0.2.4"
gimli = { version = "*", default-features = false, optional = true }
hashbrown = { workspace = true }
indoc = "2"
inherit-methods-macro = "0.1.0"
kspin.workspace = true
lazy_static = { workspace = true }
linkme.workspace = true
linux-raw-sys = { workspace = true, features = ["ioctl", "loop_device"] }
memaddr.workspace = true
num_enum = { version = "0.7", default-features = false }
rand = { version = "0.9.1", default-features = false, features = [
    "alloc",
    "small_rng",
] }
rand_chacha = { version = "0.3", default-features = false, optional = true }
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
scope-local.workspace = true
slab.workspace = true
kprocess.workspace = true
ksignal.workspace = true
osvm.workspace = true
linux_sysno.workspace = true
zerocopy = { version = "0.8.26", features = ["derive"] }

bincode = { version = "2.0.1", default-features = false, optional = true, features = [
    "alloc",
    "derive",
] }
tee_raw_sys = { workspace = true, optional = true }
uuid = { version = "0.8", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true, features = [
    "alloc",
] }

kcore.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.14"
