[package]
name = "kcore"
description = "Core kernel crate for X-Kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
backtrace.workspace = true
platconfig.workspace = true
kerrno.workspace = true
kfeat.workspace = true
fs-ng-vfs.workspace = true
kfs.workspace = true
khal.workspace = true
kio.workspace = true
klogger.workspace = true
memspace.workspace = true
kpoll.workspace = true
ksync.workspace = true
ktask.workspace = true
bitflags.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
event-listener.workspace = true
extern-trait.workspace = true
hashbrown = { workspace = true }
inherit-methods-macro = "0.1.0"
kernel-elf-parser = { git = "https://github.com/Starry-OS/kernel_elf_parser.git", rev = "fdcce74" }
kspin.workspace = true
lazy_static = { workspace = true }
linkme.workspace = true
linux-raw-sys.workspace = true
lock_api = { version = "0.4.13", features = ["arc_lock"] }
memaddr.workspace = true
ouroboros = { version = "0.18.5", default-features = false }
percpu = { workspace = true }
scope-local.workspace = true
slab.workspace = true
spin.workspace = true
kprocess.workspace = true
ksignal.workspace = true
osvm.workspace = true
strum = { workspace = true }
weak-map = "0.1.1"
xmas-elf = "0.9"

[target.'cfg(not(any(target_arch = "aarch64", target_arch = "loongarch64")))'.dependencies]
memspace = { workspace = true, features = ["copy"] }

[features]
tee = []
