[package]
name = "kfeat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Top-level feature selection for x-kernel"

[features]
default = []

# Multicore
smp = ["khal/smp", "kruntime/smp", "ktask?/smp", "kspin/smp"]

# Floating point/SIMD
fp-simd = ["khal/fp-simd"]

# User space support
uspace = ["khal/uspace"]

# Interrupts
ipi = [ "dep:kipi", "khal/ipi", "kruntime/ipi"]

crosvm = ["khal/crosvm", "kdriver/crosvm", "kruntime/crosvm"]
sev = ["dma", "kdriver/sev", "memspace/sev"]

# Memory
alloc = ["kalloc", "kruntime/alloc"]
alloc-tlsf = ["kalloc/tlsf"]
alloc-slab = ["kalloc/slab"]
alloc-buddy = ["kalloc/buddy"]
alloc-level-1 = ["kalloc/level-1", "alloc"]
page-alloc-64g = ["kalloc/page-alloc-64g"]                   # up to 64G memory capacity
page-alloc-4g = ["kalloc/page-alloc-4g"]                     # up to 4G memory capacity
paging = ["alloc", "khal/paging", "kruntime/paging"]
dma = ["alloc", "paging"]

task-ext = ["ktask/task-ext"]
sched-fifo = ["ktask/sched-fifo"]
sched-rr = ["ktask/sched-rr"]
sched-cfs = ["ktask/sched-cfs"]

# File system
fs = [
    "alloc",
    "paging",
    "kdriver/virtio-blk",
    "dep:kfs",
    "kruntime/fs",
] # TODO: try to remove "paging"
fs-ext4 = ["fs", "kfs/ext4"]
fs-fat = ["fs", "kfs/fat"]
fs-times = ["fs", "kfs/times"]

# Networking
net = ["alloc", "paging", "kdriver/virtio-net", "dep:knet", "kruntime/net"]
vsock = ["net", "kdriver/virtio-socket", "kruntime/vsock", "knet/vsock"]

# Display
display = [
    "alloc",
    "paging",
    "kdriver/virtio-gpu",
    "dep:fbdevice",
    "kruntime/display",
]

# Input
input = [
    "alloc",
    "paging",
    "kdriver/virtio-input",
    "dep:inputdev",
    "kruntime/input",
]

# Real Time Clock (RTC) Driver.
rtc = ["khal/rtc", "kruntime/rtc"]

# Device drivers
bus-mmio = ["kdriver/bus-mmio"]
bus-pci = ["kdriver/bus-pci"]
driver-ramdisk = ["kdriver/ramdisk", "kfs?/use-ramdisk"]
driver-sdmmc = ["kdriver/sdmmc"]
# driver-ixgbe = ["kdriver?/ixgbe"]
# driver-fxmac = ["kdriver?/fxmac"]                          # fxmac ethernet driver for PhytiumPi
driver-bcm2835-sdhci = ["kdriver/bcm2835-sdhci"]
driver-ahci = ["kdriver/ahci"]

# driver-dyn = ["paging", "kruntime/driver-dyn", "kdriver/dyn"]

# Backtrace
dwarf = ["alloc", "backtrace/dwarf"]

# Watchdog
watchdog = ["kruntime/watchdog"]

# Pmu
pmu = ["kruntime/pmu"]

[dependencies]
memspace = { workspace = true, optional = true }
kalloc = { workspace = true, optional = true }
backtrace.workspace = true
fbdevice = { workspace = true, optional = true }
kdriver.workspace = true
kfs = { workspace = true, optional = true }
khal.workspace = true
inputdev = { workspace = true, optional = true }
kipi = { workspace = true, optional = true }
klogger.workspace = true
knet = { workspace = true, optional = true }
kruntime.workspace = true
ksync = { workspace = true, optional = true }
ktask = { workspace = true, optional = true }
kspin = { workspace = true, optional = true }
