[package]
name = "kcpu"
version = "0.3.0"
edition = "2021"
authors.workspace = true
description = "Privileged instruction and structure abstractions for various CPU architectures"
license.workspace = true
homepage = "https://github.com/kylin-x-kernel/kcpu"
repository = "https://github.com/kylin-x-kernel/kcpu"
documentation = "https://docs.rs/kcpu"
keywords = ["xkernel", "cpu", "architecture", "hal"]
categories = ["embedded", "no-std", "hardware-support", "os"]
rust-version = "1.88.0"

[features]
default = []
fp-simd = []
tls = []
uspace = []
arm-el2 = []

[dependencies]
backtrace = { workspace = true }
kplat = { workspace = true }
linkme = "0.3"
log = "0.4"
cfg-if = "1.0"
memaddr = { workspace = true }
page_table = { workspace = true }
percpu = { workspace = true }
static_assertions = "1.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
lazyinit = "0.2"
x86 = "0.52"
x86_64 = "0.15.2"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
tock-registers = "0.9"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.14"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = "0.2.4"
page_table = { workspace = true }

[lints.clippy]
new_without_default = "allow"

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-none",
    "aarch64-unknown-none-softfloat",
    "riscv64gc-unknown-none-elf",
    "loongarch64-unknown-none-softfloat",
]
